--- a/reactTSBlog/blog/src/components/Blogs.css
+++ b/reactTSBlog/blog/src/components/Blogs.css
@@ -1,14 +1,16 @@
 .blogs-container{
-    padding: 5px;
+    padding-left: 20px;
+    padding-top: 5px;
+    padding-right: 20px;
     border: 1px solid #6c757d;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: #dfdfdf;
     margin-bottom: 1rem;
 }
 
 .text-light{
     opacity: 1;
-    color: #6c757d;
+    color: #070808;
 }
 
 .blogs-btn{
