--- a/reactTSBlog/blog/src/components/Header.css
+++ b/reactTSBlog/blog/src/components/Header.css
@@ -6,10 +6,10 @@
     right: 0;
     height: 60px;
     display: flex;
-    justify-content: flex-start;
+    justify-content:center;
     align-items: center;
     color: white;
 }
-.navbar h3{
+.navbar h1{
     margin-left: 20px;
 }
