--- a/reactTSBlog/blog/src/components/Header.css
+++ b/reactTSBlog/blog/src/components/Header.css
@@ -4,11 +4,12 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 60px;
+    height: 100px;
     display: flex;
     justify-content:center;
     align-items: center;
     color: white;
+    padding-top: 10px;
 }
 .navbar h1{
     margin-left: 20px;
