--- a/reactTSBlog/blog/src/components/Header.css
+++ b/reactTSBlog/blog/src/components/Header.css
@@ -9,7 +9,8 @@
     justify-content:center;
     align-items: center;
     color: white;
-    padding-top: 10px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 .navbar h1{
     margin-left: 20px;
